# chipz

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  PLATFORM_INTEGRATION.md  README.md  TESTING.md
cmake/: chipzConfig.cmake.in
devices/: CMakeLists.txt
devices/ds3231/: CMakeLists.txt  test_ds3231.cpp
devices/ds3231/include/chipz/devices/: ds3231.hpp
devices/hd44780/: CMakeLists.txt  test_hd44780.cpp
devices/hd44780/include/chipz/devices/: hd44780.hpp
devices/max6675/: CMakeLists.txt  test_max6675.cpp
devices/max6675/include/chipz/devices/: max6675.hpp
devices/mcp795w/: CMakeLists.txt
devices/mcp795w/include/chipz/devices/: mcp795w.hpp
devices/pcf8574/: CMakeLists.txt
devices/pcf8574/include/chipz/devices/: pcf8574.hpp
devices/tja1145/: CMakeLists.txt
devices/tja1145/include/chipz/devices/: tja1145.hpp
examples/: CMakeLists.txt  basic_usage.cpp  buffer_management.cpp  ds3231_example.cpp  ds3231_stm32.cpp  hd44780_example.cpp  hd44780_stm32.cpp  max6675_example.cpp  max6675_stm32.cpp  mcp795w_stm32.cpp  tja1145_stm32.cpp  wrapping_c_code.cpp
examples/stm32H533RET/: .gitignore  .mxproject  CMakeLists.txt  STM32H533xx_FLASH.ld  STM32H533xx_RAM.ld  crash_data.ld  fault_monitor.toml  openocd.cfg  stm32H533RET.ioc
examples/stm32H533RET/Chipz/: app.cpp
examples/stm32H533RET/Chipz/demo/: demo.cpp
examples/stm32H533RET/Core/Inc/: stm32h5xx_hal_conf.h  stm32h5xx_it.h
examples/stm32H533RET/Core/Src/: main.c  stm32h5xx_hal_msp.c  stm32h5xx_it.c
examples/stm32H533RET/cmake/: chipz-post-cubemx.cmake  gcc-arm-none-eabi.cmake  starm-clang.cmake
examples/stm32H533RET/cmake/stm32cubemx/: CMakeLists.txt
include/chipz/: CMakeLists.txt  chip.hpp  chipz.hpp  communication_interface.hpp  concepts.hpp  core.hpp  isr_source.hpp  peripheral.hpp  timer_interface.hpp
include/chipz/completion_sources/: external_completion_source.hpp  timer_completion_source.hpp
include/chipz/core/: chip.hpp  communication_interface.hpp  concepts.hpp  core.hpp  timer_interface.hpp  wait_condition.hpp
include/chipz/core/completion_sources/: external_completion_source.hpp  timer_completion_source.hpp
include/chipz/devices/: ds3231.hpp  hd44780.hpp  max6675.hpp  mcp795w.hpp  pcf8574.hpp  tja1145.hpp
include/chipz/interfaces/: can_interface.hpp  i2c_interface.hpp  parallel_interface.hpp  spi_interface.hpp  uart_interface.hpp
include/chipz/network/can/: can_interface.hpp
include/chipz/platform/freertos/: cpp_allocator.hpp
port/stm32h5xx/: CMakeLists.txt  chipz_isrs.cpp  config.cpp  fault_handlers.cpp  fault_handlers.hpp  hal_timer.hpp  irq.hpp  spin.hpp  tim6_timer.hpp
src/platform/freertos/: cpp_allocator.cpp
tests/: CMakeLists.txt  chipz_tests  mock_gpio.hpp  mock_i2c.hpp  test_ds3231.cpp  test_hd44780.cpp  test_max6675.cpp  test_peripheral.cpp
tests/core/: test_chip.cpp  test_communication_interface.cpp
tests/interfaces/: test_i2c_interface.cpp  test_spi_interface.cpp  test_uart_interface.cpp
tests/support/: mock_spi.hpp
tools/: crash_grab.py  fault_decoder.py
